--- a/package.json
+++ b/package.json
@@ -5,8 +5,13 @@
   "keywords": [],
   "main": "src/index.js",
   "dependencies": {
+    "moment": "2.29.1",
+    "moment-precise-range-plugin": "1.3.0",
     "react": "17.0.1",
+    "react-countdown-circle-timer": "2.5.0",
+    "react-datepicker": "3.6.0",
     "react-dom": "17.0.1",
+    "react-icons": "4.2.0",
     "react-scripts": "4.0.0"
   },
   "devDependencies": {
